@@ -2,6 +2,7 @@ noinst_DATA =					\
 	PlaylistWindow.glade			\
 	AddWindow.glade				\
 	SkipToWindow.glade			\
+	SearchMusicWindow.glade			\
 	ErrorDialog.glade			\
 	YesNoDialog.glade			\
 	ProgressWindow.glade
